# trainmaster

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: poetry.yml  test.yml
tests/example/: __init__.py  test_some_function.py
trainmaster/: main.py
