[tool.poetry]
name = "trainmaster"
version = "0.1.0"
description = ""
authors = ["Wannes Lint <contact@wanneslint.net>"]

[tool.poetry.dependencies]
python = "^3.9"
simpy = "^4.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
mypy = "^0.931"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
